# ProtDSL

./: .gitignore  README.md  a.out  commands.txt  decoder.cpp  encoder.rb  generate_decoder_binary.sh  main.rb  riscv_decode  run  tree.dot
Generic/: base.rb  builder.rb  constants.rb  constants_decoder.rb  constants_encoder.rb  scope.rb  var.rb
Generic/Decoder/: DecoderDSL.rb  constants_decoder.rb  decoder_generator.rb  decoder_tree.rb  dump_decoder_tree.rb  helper.rb  switch.rb
Generic/Encoder/: encoder_generator.rb
Simulator/: CMakeLists.txt  decoders.hpp  elf.cpp  executers.hpp  main.cpp  main.hpp  spu.cpp  spu.hpp
Tests/: add.rb  add_sub.rb  all_i.rb  all_r.rb  all_s.rb  smth.rb  sub.rb  test_rv32im.c
Tests/Answers/: all_i.ans  all_r.ans
dot/: tree.dot
logs/: log.txt
shit/old_binary/logs/: compare.diff  dumpp
src/: CMakeLists.txt  decoders.hpp  executers.hpp  main.cpp  main.hpp  spu.hpp
